--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
     "swiper": "^12.0.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^4.3.5"
   },
   "scripts": {
     "predeploy": "npm run build",
